# evolved-todo

./: GUIDE.md  README.md  pyproject.toml
3 - PHASE THREE/: .gitignore  AGENTS.md  README.md  SUBAGENTS.md  pyproject.toml
3 - PHASE THREE/.claude/agents/: database-schema-architect.md  dependency-auditor.md  doc-curator.md  e2e-integration-architect.md  git-workflow.md  performance-optimizer.md
3 - PHASE THREE/.claude/skills/api-contract-testing/: SKILL.md  examples.md
3 - PHASE THREE/.claude/skills/better-auth-jwt/: SKILL.md
3 - PHASE THREE/.claude/skills/error-handling/: SKILL.md
3 - PHASE THREE/.claude/skills/fastapi-sqlmodel/: SKILL.md  reference.md
3 - PHASE THREE/.claude/skills/model-service/: reference.md
3 - PHASE THREE/.claude/skills/neon-postgres/: SKILL.md
3 - PHASE THREE/.claude/skills/nextjs-app-router/: SKILL.md  reference.md
3 - PHASE THREE/.claude/skills/react-components/: SKILL.md
3 - PHASE THREE/.claude/skills/spec-to-code/: SKILL.md
3 - PHASE THREE/.claude/skills/testing-patterns/scripts/: helper.py
3 - PHASE THREE/.specify/memory/: constitution.md
3 - PHASE THREE/backend/: .env.example  .env.template
3 - PHASE THREE/backend/alembic/versions/: 8808489c43b3_add_conversations_and_messages_tables.py
3 - PHASE THREE/backend/app/: main.py
3 - PHASE THREE/backend/app/agents/: README.md  __init__.py  prompts.py  todo_agent.py
3 - PHASE THREE/backend/app/api/: auth.py  chat.py
3 - PHASE THREE/backend/app/core/: settings.py
3 - PHASE THREE/backend/app/mcp/: server.py
3 - PHASE THREE/backend/app/mcp/tools/: add_task.py  complete_task.py  delete_task.py  registry.py
3 - PHASE THREE/backend/app/models/: message.py
3 - PHASE THREE/backend/app/utils/: __init__.py  text.py
3 - PHASE THREE/backend/scripts/: reset_database.py
3 - PHASE THREE/backend/src/evolved_todo_backend/: __init__.py
3 - PHASE THREE/backend/tests/: conftest.py
3 - PHASE THREE/backend/tests/unit/: test_chat_api.py  test_mcp_server.py  test_mcp_tools.py  test_models.py
3 - PHASE THREE/frontend/: next.config.ts
3 - PHASE THREE/frontend/__tests__/components/: DueDateIndicator.test.tsx  RecurrenceSelector.test.tsx  TaskItem.test.tsx  TaskList.test.tsx
3 - PHASE THREE/frontend/app/(auth)/register/: page.tsx
3 - PHASE THREE/frontend/app/dashboard/: page.tsx
3 - PHASE THREE/frontend/components/common/: ConfirmDialog.tsx  LoadingSkeleton.tsx
3 - PHASE THREE/frontend/components/tasks/: DueDateIndicator.tsx  SearchBar.tsx  SortDropdown.tsx  TaskFilters.tsx
3 - PHASE THREE/frontend/components/ui/: calendar.tsx
3 - PHASE THREE/frontend/hooks/: useAuth.ts  useTasks.ts
3 - PHASE THREE/frontend/types/: chat.ts
3 - PHASE THREE/history/adr/001-phase1-todo-app/: ADR-003-date-parsing-library.md
3 - PHASE THREE/history/adr/002-phase2-web-app/: ADR-007-monorepo-architecture.md  ADR-008-frontend-technology-stack.md
3 - PHASE THREE/history/adr/003-phase3-ai-chatbot/: ADR-001-ai-technology-stack.md  ADR-002-stateless-architecture.md  ADR-003-database-schema-conversation-persistence.md
3 - PHASE THREE/history/prompts/001-phase1-todo-app/: 005-create-delete-task-spec.spec.prompt.md
3 - PHASE THREE/history/prompts/002-phase2-web-app/: 003-create-view-tasks-web-spec.spec.prompt.md  005-create-complete-task-web-spec.spec.prompt.md  009-create-sort-tasks-web-spec.spec.prompt.md
3 - PHASE THREE/history/prompts/003-phase3-ai-chatbot/: 001-create-phase3-spec.spec.prompt.md  002-create-phase3-plan.plan.prompt.md  004-generate-phase3-tasks.tasks.prompt.md
3 - PHASE THREE/specs/001-phase1-todo-app/005-delete-task/checklists/: requirements.md
3 - PHASE THREE/specs/001-phase1-todo-app/009-recurring-tasks/checklists/: requirements.md
3 - PHASE THREE/specs/002-phase2-web-app/001-authentication/: spec.md
3 - PHASE THREE/specs/002-phase2-web-app/004-update-task-web/: spec.md
3 - PHASE THREE/specs/002-phase2-web-app/005-complete-task-web/: spec.md
3 - PHASE THREE/specs/002-phase2-web-app/006-delete-task-web/: spec.md
3 - PHASE THREE/specs/002-phase2-web-app/010-recurring-tasks-web/checklists/: requirements.md
3 - PHASE THREE/specs/003-phase3-ai-chatbot/: data-model.md  plan.md  research.md  spec.md
3 - PHASE THREE/specs/003-phase3-ai-chatbot/checklists/: requirements.md
3 - PHASE THREE/specs/003-phase3-ai-chatbot/contracts/: agent-behavior.md
PHASE THREE/backend/: pyproject.toml  pytest.ini
PHASE THREE/backend/alembic/versions/: add_task_performance_indexes.py
PHASE THREE/backend/app/models/: __init__.py  conversation.py  task.py
PHASE THREE/backend/app/services/: auth_service.py
PHASE THREE/backend/tests/integration/: temp_delete_tests.py  test_filtering.py  test_health.py  test_sorting.py  test_toggle_complete.py
PHASE THREE/backend/tests/unit/: test_auth_api.py  test_auth_service.py  test_error_schemas.py  test_task_service.py
(+470 files in other folders)
